Update project: backend and frontend improvements, add test files and documentation